<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/startstop_menu"
        android:icon="@drawable/ic_menu_play_clip"
        android:title="@string/connect_label"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/dash_menu"
        android:icon="@drawable/ic_menu_recent_history"
        android:title="@string/dash_label"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/logs_menu"
        android:title="@string/logs_label" />
    <item
        android:id="@+id/preferences_menu"
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/preferences_label" />
    <item
        android:id="@+id/about_menu"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/about_label" />
</menu>
