<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/diag_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hd_surface"
    android:orientation="vertical"
    android:padding="@dimen/space_16">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/diag1_layout"
        style="@style/Widget.HarleyDroid.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="@dimen/space_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_12"
                android:text="@string/vin_tap_hint"
                android:textAppearance="@style/TextAppearance.HarleyDroid.Section" />

            <TextView
                android:id="@+id/vin_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vin_label"
                android:textAppearance="@style/TextAppearance.HarleyDroid.Label" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/vin_field"
                style="@style/Widget.HarleyDroid.VinButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_12" />

            <TextView
                android:id="@+id/ecmpn_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ecmpn_label"
                android:textAppearance="@style/TextAppearance.HarleyDroid.Label" />

            <TextView
                android:id="@+id/ecmpn_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_12"
                android:textAppearance="@style/TextAppearance.HarleyDroid.Value" />

            <TextView
                android:id="@+id/ecmcalid_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ecmcalid_label"
                android:textAppearance="@style/TextAppearance.HarleyDroid.Label" />

            <TextView
                android:id="@+id/ecmcalid_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_12"
                android:textAppearance="@style/TextAppearance.HarleyDroid.Value" />

            <TextView
                android:id="@+id/ecmswlevel_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ecmswlevel_label"
                android:textAppearance="@style/TextAppearance.HarleyDroid.Label" />

            <TextView
                android:id="@+id/ecmswlevel_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.HarleyDroid.Value" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/dtc1_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_16"
        android:layout_weight="1"
        android:background="@drawable/bg_section_card"
        android:orientation="vertical"
        android:padding="@dimen/space_12">

        <TextView
            android:id="@+id/currentdtc_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:text="@string/dtc_current_title"
            android:textAppearance="@style/TextAppearance.HarleyDroid.Section" />

        <ListView
            android:id="@+id/currentdtc_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/hd_divider"
            android:dividerHeight="1dp"
            android:paddingTop="@dimen/space_4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dtc2_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_12"
        android:layout_weight="1"
        android:background="@drawable/bg_section_card"
        android:orientation="vertical"
        android:padding="@dimen/space_12">

        <TextView
            android:id="@+id/historicdtc_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_8"
            android:text="@string/dtc_historic_title"
            android:textAppearance="@style/TextAppearance.HarleyDroid.Section" />

        <ListView
            android:id="@+id/historicdtc_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/hd_divider"
            android:dividerHeight="1dp"
            android:paddingTop="@dimen/space_4" />
    </LinearLayout>
</LinearLayout>
